Add inputs for release workflow configuration

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,12 +2,26 @@ name: Release
 
 on:
   workflow_dispatch:
-#  push:
-#    branches:
-#      - main
-#      - beta
-#  schedule:
-#    - cron: "0 2 * * *"
+    inputs:
+      publish_npm:
+        description: "Publish to npm (semantic-release)"
+        type: boolean
+        required: false
+        default: false
+      publish_docker:
+        description: "Build & push Docker image to GHCR"
+        type: boolean
+        required: false
+        default: true
+      channel:
+        description: "Release channel/tag (latest, beta, dev)"
+        type: choice
+        required: false
+        default: dev
+        options:
+          - latest
+          - beta
+          - dev
 
 permissions:
   contents: read
@@ -45,6 +59,7 @@ jobs:
         run: pnpm run build
 
       - name: Release
+        if: ${{ inputs.publish_npm }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: pnpm run release
@@ -54,9 +69,21 @@ jobs:
         run: |
           RELEASE_VERSION=$([ -f RELEASE_VERSION ] && cat RELEASE_VERSION || echo '')
           RELEASE_CHANNEL=$([ -f RELEASE_CHANNEL ] && cat RELEASE_CHANNEL || echo '')
-          if [ -z "$RELEASE_CHANNEL" ]; then
-            RELEASE_CHANNEL=latest
+
+          # If npm release was skipped, generate a version from git sha
+          if [ -z "$RELEASE_VERSION" ]; then
+            SHORT_SHA=$(git rev-parse --short=12 HEAD)
+            RELEASE_VERSION="0.0.0+${SHORT_SHA}"
           fi
+
+          # Prefer channel from file, otherwise from workflow input, otherwise latest
+          if [ -z "$RELEASE_CHANNEL" ]; then
+            RELEASE_CHANNEL="${{ inputs.channel }}"
+          fi
+          if [ -z "$RELEASE_CHANNEL" ]; then
+            RELEASE_CHANNEL="latest"
+          fi
+
           echo "release-version=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
           echo "release-channel=$RELEASE_CHANNEL" >> "$GITHUB_OUTPUT"
           cat "$GITHUB_OUTPUT"
@@ -67,7 +94,7 @@ jobs:
           name: package.tgz
           path: apps/ha-plus-matter-hub/package.tgz
       - name: Upload Documentation
-        if: steps.release.outputs.release-version != ''
+        if: ${{ inputs.publish_npm && steps.release.outputs.release-channel == 'latest' }}
         uses: actions/upload-pages-artifact@v4
         with:
           path: "./docs/_build/html"
@@ -87,7 +114,7 @@ jobs:
     name: "Build Docker"
     runs-on: ubuntu-24.04-arm
     needs: [prepare-docker, release]
-    if: needs.release.outputs.release-version != ''
+    if: ${{ inputs.publish_docker }}
     permissions:
       packages: write
     strategy:
@@ -126,7 +153,7 @@ jobs:
     name: "Publish Documentation"
     runs-on: ubuntu-latest
     needs: [release]
-    if: needs.release.outputs.release-version != '' && needs.release.outputs.release-channel == 'latest'
+    if: ${{ inputs.publish_npm && needs.release.outputs.release-channel == 'latest' }}
     permissions:
       id-token: write
       pages: write
